@@ -6,7 +6,7 @@
 ### Compute the intersection of a circular domain with a polygonal domain of
 ### various classes (currently: owin, gpc.poly, or SpatialPolygons)
 ###
-### Copyright (C) 2009-2014 Sebastian Meyer
+### Copyright (C) 2009-2015 Sebastian Meyer
 ### $Revision$
 ### $Date$
 ################################################################################
@@ -29,8 +29,10 @@ intersectPolyCircle.gpc.poly <- function (object, center, radius,
 
 intersectPolyCircle.owin <- function (object, center, radius, npoly = 32, ...)
 {
-    intersect.owin(disc(radius=radius, centre=center, npoly=npoly),
-                   object)  # order doesn't seem to influence computational cost
+    circle <- disc(radius = radius, centre = center, npoly = npoly)
+    res <- intersect.owin(circle, object)  # order does not affect runtime
+    ## ensure "polygonal" type (because of rescue.rectangle in intersect.owin)
+    as.polygonal(res)
 }
 
 intersectPolyCircle.SpatialPolygons <- function (object, center, radius,
